--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -7,12 +7,14 @@
       <!--Change this to customize the navigation-->
       <div class="taglist-wrapper clearfix">
         <ul id="taglist" class="taglist">
-            <li><a href="{{@blog.url}}">Home</a></li>
-            <li><a href="/tag/javascript">javascript</a></li>
-            <li><a href="/tag/nodejs">nodejs</a></li>
-            <li><a href="/tag/data-visualization">data visualization</a></li>
-            <li><a href="/tag/d3">d3</a></li>
-            <li><a href="/tag/maps">maps</a></li>
+            <li><a href="{{@blog.url}}">
+            <i class="fa fa-home" aria-hidden="true"></i>
+            Home</a></li>
+            <li>
+            <a href="/tag/beginner"><i class="fa fa-map-marker" aria-hidden="true"></i> 初学者</a></li>
+            <li><a href="/tag/theming"><i class="fa fa-magic" aria-hidden="true"></i> 主题开发</a></li>
+            <li><a href="/tag/plugining"><i class="fa fa-gears" aria-hidden="true"></i> 插件开发</a></li>
+            <li><a target="_blank" href="https://v2mm.tech"><i class="fa fa-plane" aria-hidden="true"></i> V2MM</a></li>
         </ul>
       </div>
     </nav>
