--- a/post.hbs
+++ b/post.hbs
@@ -19,7 +19,7 @@
             <img src="{{image}}" class="post-image"/>
         </div>
         {{/if}}
-    
+
     <article class="{{post_class}}">
 
         <header class="post-header">
@@ -81,21 +81,6 @@
 
 
 
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    var disqus_shortname = 'example'; // required: replace example with your forum shortname
-    var disqus_identifier = '{{post.id}}';
- 
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-
 
 
     </article>
@@ -105,5 +90,7 @@
 <div id="sidebar">{{> "sidebar"}}</div>
 
 </main>
+
+<script id='nodebb-comments-script' ourl="http://localhost:4567" ocid="46" blogger='river' src="http://localhost:4567/plugins/nodebb-plugin-blog-comments2/lib/simple-ghost.js"></script>
 
 {{/post}}
