--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -4,7 +4,7 @@
     <p>{{@blog.description}}</p>
 
     <!--Change this to your homepage-->
-    <p>See our latest projects at <a href="http://www.webkid.io">webkid.io</a></p>
+    <p><a href="https://v2mm.tech" target="_blank">V2MM.TECH</a> 是我基于 NodeBB 的开发实践，开放源码，如有问题或建议欢迎在<a href="https://v2mm.tech/category/43/nodebb" target="_blank">V2MM</a>上讨论。</p>
 
   </div>
 </div>
@@ -13,12 +13,12 @@
 <div class="sidebox box social clearfix">
   <ul>
     <a href="/rss" target="_blank" class="social-item rss"><li><i class="fa fa-rss"></i></li></a>
-    
-    <a href="http://twitter.com/webk1d" target="_blank" class="social-item tw"><li><i class="fa fa-twitter"></i></li></a>
-    
-    <a href="http://github.com/wbkd" target="_blank" class="social-item github"><li><i class="fa fa-github"></i></li></a>
-    
-    <a href="http://webkid.io" target="_blank" class="social-item home"><li><i class="fa fa-home"></i></li></a>
+
+    <a href="https://github.com/revir" target="_blank" class="social-item github"><li><i class="fa fa-github"></i></li></a>
+
+    <a href="http://weibo.com/u/1721423795" target="_blank" class="social-item weibo"><li><i class="fa fa-weibo"></i></li></a>
+
+    <a href="https://www.zhihu.com/people/revir" target="_blank" class="social-item zhihu"><li><i class="fa">知</i></li></a>
 
   </ul>
 
