update post share

--- a/default.hbs
+++ b/default.hbs
@@ -43,6 +43,7 @@
     <script type="text/javascript" src="{{asset "js/jquery.xml2json.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/webkid.js"}}"></script>
+    <script src='https://revir.b0.upaiyun.com/lib/more-basic-share-0.1.js'></script>
 
 </body>
 </html>
