--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -14,6 +14,7 @@
             <a href="/tag/beginner"><i class="fa fa-map-marker" aria-hidden="true"></i> 初学者</a></li>
             <li><a href="/tag/theming"><i class="fa fa-magic" aria-hidden="true"></i> 主题开发</a></li>
             <li><a href="/tag/plugining"><i class="fa fa-gears" aria-hidden="true"></i> 插件开发</a></li>
+            <li><a href="/tag/coding"><i class="fa fa-linux" aria-hidden="true"></i> 源码分析</a></li>
             <li><a target="_blank" href="https://v2mm.tech"><i class="fa fa-plane" aria-hidden="true"></i> V2MM</a></li>
         </ul>
       </div>
