--- a/assets/css/webkid.css
+++ b/assets/css/webkid.css
@@ -370,3 +370,16 @@ a.article-link:visited {
     display: none;
   }
 }
+
+#article a {
+  color: #337ab7;
+  text-decoration: none;
+}
+
+#article .author h4.a {
+  color: #2e2e2e;
+}
+
+#article .share a {
+  color: #BBC7CC;
+}
