--- a/assets/css/webkid.css
+++ b/assets/css/webkid.css
@@ -376,7 +376,7 @@ a.article-link:visited {
   text-decoration: none;
 }
 
-#article .author h4.a {
+#article .author h4 a {
   color: #2e2e2e;
 }
 
